fixed header nav menu overlap bug

--- a/themes/matrix-theme/assets/css/style.css
+++ b/themes/matrix-theme/assets/css/style.css
@@ -1740,7 +1740,10 @@ html[xmlns] .flexslider .slides {
 		row-gap: 15px;
 		column-gap: 15px;
 	}
-	.front-page .wp-block-template-part>*:first-child {
+	header.wp-block-template-part + div:first-child {
+		margin-top: 78px;
+	}
+	.front-page .wp-block-template-part > *:first-child {
 		padding: 0 0 0 120px;
 	}
 	.wp-block-matrix-banner-block {
